--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,6 +1,6 @@
 ---
 title: Portfolio
-description: 지금까지 작업했던 디자인을 모아놓은 곳입니다.
+description: 
 permalink: portfolio
 visible: true
 ---
@@ -27,6 +27,6 @@ visible: true
 {% else %}
 <div class="hyde empty">
   <img src="/assets/images/waldo.png" alt="not_found" />
-  <p>게시물이 없습니다.</p>
+  <p>no post.</p>
 </div>
 {% endif %}
