--- a/_pages/tags.html
+++ b/_pages/tags.html
@@ -1,6 +1,6 @@
 ---
 title: Tags
-description: 태그 목록을 표시합니다.
+description: Displays a list of tags.
 permalink: tags
 visible: false
 ---
@@ -10,9 +10,9 @@ visible: false
     {% for tag in site.tags %}
     <div class="hyde tag-wrapper col-lg-4 col-md-6 col-sm-12">
       <a class="hyde tag" href="/tags/{{ tag.identifier }}">{{ tag.title }}</a>
-      <p class="hyde tag-desc">{% if tag.description %}{{ tag.description }}{% else %}설명이 없습니다.{% endif %}</p>
+      <p class="hyde tag-desc">{% if tag.description %}{{ tag.description }}{% else %}unknown.{% endif %}</p>
       <!-- TODO: add feature -->
-      <p class="hyde tag-count">{{ site.posts | where_exp: 'post', 'post.tags contains tag.identifier' | size }}개의 게시물</p>
+      <p class="hyde tag-count">{{ site.posts | where_exp: 'post', 'post.tags contains tag.identifier' | size }}post</p>
     </div>
     {% endfor %}
   </div>
