--- a/_pages/about.html
+++ b/_pages/about.html
@@ -6,31 +6,32 @@ visible: true
 ---
 
 <div class="Jieun content about">
-  <h2>Hyde <small class="Jieun">built with Jekyll</small></h2>
+  <h2></h2>
   <p>.</p>
   <p></p>
   <h2>⚒️ Skills</h2>
   <div class="hyde tags skills">
     <a class="hyde tag">music</a>
     <a class="hyde tag">portfoilo</a>
-    <a class="hyde tag">blog</a>
+    <a class="hyde tag">fineart</a>
+    <a class="hyde tag">drawing</a>
     <a class="hyde tag">something</a>
     <a class="hyde tag"><i class="fas fa-meteor"></i></a>
   </div>
   <h2>📖 Career</h2>
   <div class="hyde career-wrapper">
     <div class="hyde career divider">
-      <div class="hyde career-place">Hyde v2</div>
+      <div class="hyde career-place">???</div>
       <div class="hyde career-desc">
         <p class="hyde career-role">???</p>
         <p class="hyde career-duration">2021-07-11 ~ 202X-XX-XX</p>
       </div>
     </div>
     <div class="hyde career">
-      <div class="hyde career-place">Hyde</div>
+      <div class="hyde career-place">somnething</div>
       <div class="hyde career-desc">
-        <p class="hyde career-role">built with Jekyll</p>
-        <p class="hyde career-duration">2020-02-17</p>
+        <p class="hyde career-role"></p>
+        <p class="hyde career-duration">-</p>
       </div>
     </div>
   </div>
