--- a/_pages/about.html
+++ b/_pages/about.html
@@ -28,7 +28,7 @@ visible: true
       </div>
     </div>
     <div class="hyde career">
-      <div class="hyde career-place">somnething</div>
+      <div class="hyde career-place">something</div>
       <div class="hyde career-desc">
         <p class="hyde career-role"></p>
         <p class="hyde career-duration">-</p>
